Added Indian states and cities support, update todo list and improve model file structure and validation rules

--- a/zenobot/todo.txt
+++ b/zenobot/todo.txt
@@ -1,2 +1,10 @@
 Fix json response
 Make the prompt better
+Add multiple desitination support
+
+
+
+Fix response
+Indian city suporrt & validation
+Budget
+Calender support
