Fix typos in todo list, update dependencies, added budget, date range picker and enhanced number input styling.

--- a/zenobot/todo.txt
+++ b/zenobot/todo.txt
@@ -1,10 +1,12 @@
 Fix json response
 Make the prompt better
 Add multiple desitination support
-
-
-
 Fix response
-Indian city suporrt & validation
-Budget
-Calender support
+Indian city suporrt & validation - DONE
+Budget - DONE
+Calender support - DONE
+
+
+Code Fixes
+
+- Add spacing in Date Picker input
