feat: update travel assistant model with new itinerary guidelines and JSON response format to avoid food or restaurant ideas.

--- a/zenobot/todo.txt
+++ b/zenobot/todo.txt
@@ -5,8 +5,9 @@ Fix response
 Indian city suporrt & validation - DONE
 Budget - DONE
 Calender support - DONE
+Add another validation for JSON
 
 
 CSS Fixes
 
-- Add spacing in Date Picker input
+- Add spacing in Date Picker input - DONE
